--- a/page12.html
+++ b/page12.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -104,11 +105,10 @@ window.Papercups = {
         </div>
     </nav>
     <main class="page landing-page">
-        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
-            <div class="text"><img src="assets/img/BCS%20Marketing%20nobg.png" style="width: 200px;">
+        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/bcsmarketing_noicon.png&quot;) center / cover no-repeat;">
+            <div class="text"><img src="assets/img/bcsmarketing_icon.png" style="width: 200px;">
                 <h1>BCS Marketing</h1>
-                <p>Reach the galaxy</p>
-                <div class="alert alert-dark" role="alert"><span><strong>Currently 25% off!</strong></span></div><center>
+                <p>Reach the galaxy</p><center>
     <a href="https://www.producthunt.com/posts/bcs-marketing-mark-4?utm_source=badge-review&utm_medium=badge&utm_souce=badge-bcs-marketing-mark-4#discussion-body" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/review.svg?post_id=320175&theme=dark" alt="BCS Marketing | Mark 4 - Reach the Galaxy | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
 </center>
             </div>
@@ -144,18 +144,6 @@ window.Papercups = {
                             </div>
                             <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
                                 <h3>How is advertising data managed?</h3>
-                                <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4" style="width: 100%;">
-                                <h3>Features</h3>
-                                <ul>
-                                    <li>Item 1</li>
-                                    <li>Item 2</li>
-                                    <li>Item 3</li>
-                                    <li>Item 4</li>
-                                </ul>
                                 <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
                             </div>
                         </div>
