--- a/author.html
+++ b/author.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -104,8 +105,8 @@ window.Papercups = {
         </div>
     </nav>
     <main class="page landing-page">
-        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/patrick-fore-0gkw_9fy0eQ-unsplash(1).jpg&quot;) center / cover;">
-            <div class="text">
+        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/BCSAuthor_banner_noicon.png&quot;) center / cover;">
+            <div class="text"><img src="assets/img/author_a_bright.png" style="width: 200px;">
                 <h1>BCS Author</h1><!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/fruity/629125" target="_blank"></a><!-- End: gamejolt download button -->
             </div>
         </section>
