--- a/adreport.html
+++ b/adreport.html
@@ -84,7 +84,12 @@ window.Papercups = {
   async
   defer
   src="https://app.papercups.io/widget.js"
-></script><meta name="robots" content="noindex" />
+></script>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/gh/virae/we-stand-with-ukraine@v1.0.2/badge.js" async></script><meta name="robots" content="noindex" />
 </head>
 
 <body>
