--- a/index_2021.html
+++ b/index_2021.html
@@ -85,6 +85,11 @@ window.Papercups = {
   defer
   src="https://app.papercups.io/widget.js"
 ></script>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/gh/virae/we-stand-with-ukraine@v1.0.2/badge.js" async></script>
 </head>
 
 <body onload="disableselect(e)">
