--- a/values.html
+++ b/values.html
@@ -77,7 +77,7 @@
     </nav>
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
-            <div class="text"><img src="assets/img/borgcreativestudios.png" style="width: 70%;"></div>
+            <div class="text"><img src="assets/img/borg.png" style="width: 70%;"></div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;padding: 0px 0px 1px;">
             <div class="container">
