--- a/author.html
+++ b/author.html
@@ -122,7 +122,36 @@
             <!-- Start: 1 Row 2 Columns -->
             <div class="container" style="margin-top: 20px;">
                 <div class="row">
-                    <div class="col"><a class="btn btn-dark btn-lg" role="button" href="https://author.borgcreative.com/?utm_term=editor" target="_blank">Start writing</a></div>
+                    <div class="col"><button class="btn btn-dark btn-lg" type="button" data-bs-target="#modal-1" data-bs-toggle="modal">Start writing</button></div>
+                </div>
+                <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Let's start writing!</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p><a class="btn btn-outline-dark" role="button" href="https://author.borgcreative.com/" target="_blank">Web<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-browser">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <rect x="4" y="4" width="16" height="16" rx="1"></rect>
+                                            <line x1="4" y1="8" x2="20" y2="8"></line>
+                                            <line x1="8" y1="4" x2="8" y2="8"></line>
+                                        </svg>&nbsp;</a></p>
+                                <p>
+                                <div class="btn-group" role="group"><a class="btn btn-outline-dark" role="button" href="https://github.com/Borg-Creative-Studios/BCS_Author_App/releases" target="_blank">MacOS<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-apple">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M9 7c-3 0-4 3-4 5.5 0 3 2 7.5 4 7.5 1.088-.046 1.679-.5 3-.5 1.312 0 1.5.5 3 .5s4-3 4-5c-.028-.01-2.472-.403-2.5-3-.019-2.17 2.416-2.954 2.5-3-1.023-1.492-2.951-1.963-3.5-2-1.433-.111-2.83 1-3.5 1-.68 0-1.9-1-3-1z"></path>
+                                            <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2"></path>
+                                        </svg>&nbsp;</a><a class="btn btn-outline-dark" role="button" href="https://addons.mozilla.org/en-US/firefox/addon/bcs-author/" target="_blank">Firefox<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-firefox">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M4.028 7.82a9 9 0 1 0 12.823 -3.4c-1.636 -1.02 -3.064 -1.02 -4.851 -1.02h-1.647"></path>
+                                            <path d="M4.914 9.485c-1.756 -1.569 -.805 -5.38 .109 -6.17c.086 .896 .585 1.208 1.111 1.685c.88 -.275 1.313 -.282 1.867 0c.82 -.91 1.694 -2.354 2.628 -2.093c-1.082 1.741 -.07 3.733 1.371 4.173c-.17 .975 -1.484 1.913 -2.76 2.686c-1.296 .938 -.722 1.85 0 2.234c.949 .506 3.611 -.995 4.545 .354c-1.698 .102 -1.536 3.107 -3.983 2.727c2.523 .957 4.345 .462 5.458 -.34c1.965 -1.52 2.879 -3.542 2.879 -5.557c-.014 -1.398 .194 -2.695 -1.26 -4.75"></path>
+                                        </svg>&nbsp;</a></div>
+                                </p>
+                            </div>
+                            <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button></div>
+                        </div>
+                    </div>
                 </div>
             </div><!-- End: 1 Row 2 Columns -->
         </section>
