--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <!-- Start: Fruity -->
             <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
                 <div class="text-center">
-                    <div class="carousel slide carousel-dark" data-bs-ride="carousel" id="carousel-1">
+                    <div class="carousel slide carousel-dark" data-bs-ride="carousel" data-bs-pause="false" id="carousel-1">
                         <div class="carousel-inner">
                             <!-- Start: Fruity (Pineapple) -->
                             <div class="carousel-item active" style="background: url(&quot;assets/img/fruitypromo.png&quot;);">
