--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
                             <div class="carousel-item active" style="background: url(&quot;assets/img/fruitypromo.png&quot;);">
                                 <h2 style="padding-top: 5px;">Fruity Web Browser</h2>
                                 <p class="d-none d-print-block d-md-block d-lg-block d-xl-block d-xxl-block">Minimalist web browsing for MacOS.</p>
-                                <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img class="w-100 d-block" src="assets/img/fruitypromo.png" style="margin-top: -20%;">
+                                <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><a href="#"></a><img class="w-100 d-block" src="assets/img/topp3.png" style="margin-top: 0;">
                             </div><!-- End: Fruity (Pineapple) -->
                             <!-- Start: Author -->
                             <div class="carousel-item" style="background: url(&quot;assets/img/fruitypromo.png&quot;);">
                                 <h2 style="padding-top: 5px;">Author</h2>
                                 <p class="d-none d-print-block d-sm-none d-md-block d-lg-block d-xl-block d-xxl-block">A browser based, light-weight, privacy-oriented writing app.</p>
-                                <p class="text-white" style="margin-bottom: 0px;"><a href="author.html">learn more</a></p><img class="w-100 d-block" src="assets/img/bcsauthorpromo.png" style="margin-top: -20%;">
+                                <p class="text-white" style="margin-bottom: 0px;"><a href="author.html">learn more</a></p><img class="w-100 d-block" src="assets/img/topp1.png" style="margin-top: 0;">
                             </div><!-- End: Author -->
                             <!-- Start: Cloud -->
                             <div class="carousel-item" style="background: url(&quot;assets/img/fruitypromo.png&quot;);">
                                 <h2 style="padding-top: 5px;">BCS Cloud</h2>
                                 <p class="d-none d-print-block d-md-block d-lg-block d-xl-block d-xxl-block">Privacy friendly forms, calendar, and more.</p>
-                                <p class="text-white" style="margin-bottom: 0px;"><a href="cloud.html">learn more</a></p><img class="w-100 d-block" src="assets/img/cloudpromo1.png" style="margin-top: -20%;">
+                                <p class="text-white" style="margin-bottom: 0px;"><a href="cloud.html">learn more</a></p><img class="w-100 d-block" src="assets/img/topp2.png" style="margin-top: 0;">
                             </div><!-- End: Cloud -->
                         </div>
                         <div>
