--- a/emailsettings.html
+++ b/emailsettings.html
@@ -55,7 +55,7 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/gh/virae/we-stand-with-ukraine@v1.0.2/badge.js" async></script><meta name="robots" content="noindex" />
+<!--<script src="https://cdn.jsdelivr.net/gh/virae/we-stand-with-ukraine@v1.0.2/badge.js" async></script>--><meta name="robots" content="noindex" />
 </head>
 
 <body>
