--- a/index_2021.html
+++ b/index_2021.html
@@ -55,7 +55,7 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/gh/virae/we-stand-with-ukraine@v1.0.2/badge.js" async></script>
+<!--<script src="https://cdn.jsdelivr.net/gh/virae/we-stand-with-ukraine@v1.0.2/badge.js" async></script>-->
 </head>
 
 <body onload="disableselect(e)">
