--- a/webproducts.html
+++ b/webproducts.html
@@ -16,12 +16,9 @@
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="assets/css/aos.min.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
 <!-- Matomo -->
 <script>
@@ -60,61 +57,24 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="padding-bottom: 15px;box-shadow: 0px -10px 20px;">
-        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: #3d566e;border-style: none;"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: #3d566e;"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg_color.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: #3d566e;border-style: none;"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: #3d566e;"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="softwareproducts.html">Software</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link active" href="webproducts.html">Web</a></li>
-                    <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="services.html">Business</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="https://cloud.borgcreative.com/my/index.php/apps/forms/HSAbKkNKZPoG42pC" target="_blank">Contact Us</a></li>
-                    <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="https://cloud.borgcreative.com/" target="_blank">Login<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
-                                <path d="M16 7C16 9.20914 14.2091 11 12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                <path d="M12 14C8.13401 14 5 17.134 5 21H19C19 17.134 15.866 14 12 14Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                            </svg></a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <main class="page landing-page" style="background: linear-gradient(#1F1E2C, #1A1A1A);">
         <section>
-            <!-- Start: web design -->
-            <div style="padding-top: 30px;">
-                <div class="text-center">
-                    <h2 class="text-white">Web Design&nbsp;</h2>
-                    <p class="text-white">Cost-efficient websites for anyone or any business.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="webdesign.html">learn more</a></p><img src="assets/img/webdesign2.png" style="min-width: 250px;max-width: 70%;">
-                </div>
-            </div><!-- End: web design -->
-            <!-- Start: Fruity -->
-            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
-                <div class="text-center">
-                    <h2>BCS Marketing</h2>
-                    <p>Privacy by-design flat-rate marketing for anyone.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
-                </div>
-            </div><!-- End: Fruity -->
             <!-- Start: Marketing -->
             <div style="padding-top: 30px;">
                 <div class="text-center">
                     <h2 style="color: rgb(255,255,255);">BCS Author</h2>
                     <p style="color: rgb(255,255,255);">A new, browser-based text editor.</p>
                     <p class="text-white" style="margin-bottom: 0px;"><a href="https://author.borgcreative.com" target="_blank">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/bcsauthorpromo.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;">
-                </div>
-            </div><!-- End: Marketing -->
-            <!-- Start: more -->
-            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
-                <div class="text-center">
-                    <h2>Interactive Web Content</h2>
-                    <p>Interactive content to build your brand or increase customer interaction.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="interactive.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/interactive.png" style="min-width: 250px;max-width: 70%;" width="50%">
-                </div>
-            </div><!-- End: more -->
-            <!-- Start: Marketing -->
-            <div style="padding-top: 30px;">
-                <div class="text-center">
-                    <h2 style="color: rgb(255,255,255);">BCS Card</h2>
-                    <p style="color: rgb(255,255,255);">Contactless, digital business cards</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-card.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/share.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;" width="50%">
                 </div>
             </div><!-- End: Marketing -->
         </section>
@@ -129,7 +89,6 @@
                             <ul>
                                 <li><a href="softwareproducts.html">Software</a></li>
                                 <li><a href="webproducts.html">Web</a></li>
-                                <li><a href="services.html">Business</a></li>
                             </ul>
                         </div><!-- End: Services -->
                         <!-- Start: About -->
@@ -174,7 +133,7 @@
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                     <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
                                 </svg></a>
-                            <p class="copyright">Borg Creative Studios 2022</p>
+                            <p class="copyright">Jacob Borg 2023</p>
                         </div><!-- End: Social Icons -->
                     </div>
                 </div>
@@ -182,9 +141,9 @@
         </section>
     </main>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/script.min.js"></script>
+    <script src="assets/js/aos.min.min.js"></script>
 </body>
 
 </html>
