--- a/fruity.html
+++ b/fruity.html
@@ -16,12 +16,8 @@
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
 <!-- Matomo -->
 <script>
@@ -60,27 +56,21 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="padding-bottom: 15px;box-shadow: 0px -10px 20px;">
-        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: #3d566e;border-style: none;"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: #3d566e;"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg_color.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: #3d566e;border-style: none;"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: #3d566e;"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="softwareproducts.html">Software</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="webproducts.html">Web</a></li>
-                    <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="services.html">Business</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="https://cloud.borgcreative.com/my/index.php/apps/forms/HSAbKkNKZPoG42pC" target="_blank">Contact Us</a></li>
-                    <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="https://cloud.borgcreative.com/" target="_blank">Login<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
-                                <path d="M16 7C16 9.20914 14.2091 11 12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                <path d="M12 14C8.13401 14 5 17.134 5 21H19C19 17.134 15.866 14 12 14Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                            </svg></a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <main class="page landing-page">
-        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/fruitypromo-1.png&quot;) center / cover no-repeat;">
+        <section data-bss-disabled-mobile="true" data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/fruitypromo-1.png&quot;) center / cover no-repeat;">
             <div class="text">
                 <h1>Fruity</h1>
                 <p><a href="https://gamejolt.com/games/fruity/629125" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a></p>
-                <p><a href="https://apps.code4freedom.net/apps/fruity-kiwi.html" target="_blank"> <img width="200px" src="https://apps.code4freedom.net/badge.png"></a></p>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
@@ -127,7 +117,7 @@
                     <div class="col-md-6 d-md-flex justify-content-md-center align-items-md-center">
                         <!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/fruity/629125" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
                     </div>
-                    <div class="col-md-6 d-md-flex justify-content-md-center align-items-md-center"><a href="https://apps.code4freedom.net/apps/fruity-kiwi.html" target="_blank"> <img width="200px" src="https://apps.code4freedom.net/badge.png"></a></div>
+                    <div class="col-md-6 d-md-flex justify-content-md-center align-items-md-center"></div>
                 </div>
                 <div class="row">
                     <div class="col"><a class="btn btn-dark btn-lg" role="button" href="https://borg-creative-studios.github.io/fruity-website/assets/files/Terms-andConditions-Fruity.pdf" target="_blank">Terms</a></div>
@@ -238,6 +228,21 @@
                                     </svg></td>
                             </tr>
                             <tr>
+                                <td>Stable</td>
+                                <td><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="color: var(--bs-teal);">
+
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289C13.3166 6.90237 12.6834 6.90237 12.2929 7.29289L9 10.5858L7.70711 9.29289C7.31658 8.90237 6.68342 8.90237 6.29289 9.29289C5.90237 9.68342 5.90237 10.3166 6.29289 10.7071L8.29289 12.7071C8.68342 13.0976 9.31658 13.0976 9.70711 12.7071L13.7071 8.70711Z" fill="currentColor"></path>
+                                    </svg></td>
+                                <td><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="color: var(--bs-red);">
+
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM8.70711 7.29289C8.31658 6.90237 7.68342 6.90237 7.29289 7.29289C6.90237 7.68342 6.90237 8.31658 7.29289 8.70711L8.58579 10L7.29289 11.2929C6.90237 11.6834 6.90237 12.3166 7.29289 12.7071C7.68342 13.0976 8.31658 13.0976 8.70711 12.7071L10 11.4142L11.2929 12.7071C11.6834 13.0976 12.3166 13.0976 12.7071 12.7071C13.0976 12.3166 13.0976 11.6834 12.7071 11.2929L11.4142 10L12.7071 8.70711C13.0976 8.31658 13.0976 7.68342 12.7071 7.29289C12.3166 6.90237 11.6834 6.90237 11.2929 7.29289L10 8.58579L8.70711 7.29289Z" fill="currentColor"></path>
+                                    </svg></td>
+                                <td><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="color: var(--bs-teal);">
+
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289C13.3166 6.90237 12.6834 6.90237 12.2929 7.29289L9 10.5858L7.70711 9.29289C7.31658 8.90237 6.68342 8.90237 6.29289 9.29289C5.90237 9.68342 5.90237 10.3166 6.29289 10.7071L8.29289 12.7071C8.68342 13.0976 9.31658 13.0976 9.70711 12.7071L13.7071 8.70711Z" fill="currentColor"></path>
+                                    </svg></td>
+                            </tr>
+                            <tr>
                                 <td>Price:</td>
                                 <td>
                                     <p>FREE</p>
@@ -246,7 +251,7 @@
                                     <p>FREE</p>
                                 </td>
                                 <td>
-                                    <p>$2</p>
+                                    <p>FREE</p>
                                 </td>
                             </tr>
                         </tbody>
@@ -266,7 +271,6 @@
                         <ul>
                             <li><a href="softwareproducts.html">Software</a></li>
                             <li><a href="webproducts.html">Web</a></li>
-                            <li><a href="services.html">Business</a></li>
                         </ul>
                     </div><!-- End: Services -->
                     <!-- Start: About -->
@@ -311,14 +315,13 @@
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
                             </svg></a>
-                        <p class="copyright">Borg Creative Studios 2022</p>
+                        <p class="copyright">Jacob Borg 2023</p>
                     </div><!-- End: Social Icons -->
                 </div>
             </div>
         </footer><!-- End: Footer Clean -->
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
